package hcmute.edu.zentech.model;

public enum Role {
    ADMIN,
    OWNER,
    MANAGER,
    EMPLOYEE,
    CUSTOMER
}
